--- a/kaggle_mf_geo_hw7/megafon_geo_hw.ipynb
+++ b/kaggle_mf_geo_hw7/megafon_geo_hw.ipynb
@@ -2046,7 +2046,7 @@
     "for radius in radiuses:\n",
     "    print(f\"Buff zone: {radius}\")\n",
     "    tmp = count_staff_in_buffer(cafe_rquery, cafe_ovpquery, train, overpass_url, radius)\n",
-    "    cafes.append(tmp)\n",
+    "    cafes_train.append(tmp)\n",
     "    print()\n",
     "    \n",
     "hotels_train = []\n",
